RESOLVED FIXED129858
JSGlobalContextRelease incorrectly handles saving/restoring IdentifierTable
https://bugs.webkit.org/show_bug.cgi?id=129858
Summary JSGlobalContextRelease incorrectly handles saving/restoring IdentifierTable
Mark Hahnenberg
Reported 2014-03-06 18:27:09 PST
It was correct (but really ugly) prior to the combining of APIEntryShim and JSLock, but now it ends up overwriting the IdentifierTable.
Attachments
Patch (1.98 KB, patch)
2014-03-06 18:29 PST, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-03-06 18:27:52 PST
Mark Hahnenberg
Comment 2 2014-03-06 18:29:57 PST
Mark Lam
Comment 3 2014-03-06 18:40:05 PST
Comment on attachment 226073 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-03-06 19:24:10 PST
Comment on attachment 226073 [details] Patch Clearing flags on attachment: 226073 Committed r165244: <http://trac.webkit.org/changeset/165244>
WebKit Commit Bot
Comment 5 2014-03-06 19:24:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.