JSGlobalContextRelease incorrectly handles saving/restoring IdentifierTable https://bugs.webkit.org/show_bug.cgi?id=129858

Reviewed by Mark Lam.

It was correct (but really ugly) prior to the combining of APIEntryShim and JSLock,
but now it ends up overwriting the IdentifierTable that JSLock just restored.

* API/JSContextRef.cpp:
(JSGlobalContextRelease):


Canonical link: https://commits.webkit.org/147880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165244 268f45cc-cd09-0410-ab3c-d52691b4dbfc